--- a/src/Views/ForgotPasswordScreen/ForgotPassword_Screen.fxml
+++ b/src/Views/ForgotPasswordScreen/ForgotPassword_Screen.fxml
@@ -19,7 +19,7 @@
             </ImageView>
          </graphic></Button>
       <TextField fx:id="emailTF" layoutX="178.0" layoutY="406.0" prefHeight="46.0" prefWidth="931.0" promptText="Email" AnchorPane.leftAnchor="178.0" AnchorPane.rightAnchor="171.0" />
-      <Button fx:id="sendpwdBtn" layoutX="557.0" layoutY="499.0" mnemonicParsing="false" onAction="#sendpwdBtnAction" prefHeight="65.0" prefWidth="214.0" style="-fx-background-color: #D6EFFA;" text="Send Password to Email" textFill="WHITE" AnchorPane.leftAnchor="557.0" AnchorPane.rightAnchor="509.0">
+      <Button fx:id="sendpwdBtn" layoutX="557.0" layoutY="499.0" mnemonicParsing="false" onAction="#sendpwdBtnAction" prefHeight="65.0" prefWidth="214.0" style="-fx-background-color: #D6EFFA;" text="Gửi mật khẩu" textFill="WHITE" AnchorPane.leftAnchor="557.0" AnchorPane.rightAnchor="509.0">
          <font>
             <Font name="Tahoma Bold" size="16.0" />
          </font></Button>
@@ -33,7 +33,7 @@
             <Image url="@google.png" />
          </image>
       </ImageView>
-      <Label layoutX="514.0" layoutY="314.0" text="Trouble Logging In?" AnchorPane.leftAnchor="514.0" AnchorPane.rightAnchor="-112.0">
+      <Label layoutX="514.0" layoutY="314.0" text="Có vấn đề đăng nhập?" AnchorPane.leftAnchor="514.0" AnchorPane.rightAnchor="-112.0">
          <font>
             <Font name="Tahoma Bold" size="27.0" />
          </font>
