--- a/src/Views/ForgotPasswordScreen/ForgotPassword_Screen.fxml
+++ b/src/Views/ForgotPasswordScreen/ForgotPassword_Screen.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,31 +13,28 @@
    <children>
       <Button fx:id="backBtn" layoutX="45.0" layoutY="52.0" mnemonicParsing="false" onAction="#backBtnAction" prefHeight="54.0" prefWidth="55.0" style="-fx-background-color: FFFFFF;">
          <graphic>
-            <ImageView fitHeight="44.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="37.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@left-arrow.png" />
                </image>
             </ImageView>
          </graphic></Button>
-      <TextField fx:id="emailTF" layoutX="178.0" layoutY="406.0" prefHeight="46.0" prefWidth="931.0" promptText="Email" AnchorPane.leftAnchor="178.0" AnchorPane.rightAnchor="171.0" />
-      <Button fx:id="sendpwdBtn" layoutX="557.0" layoutY="499.0" mnemonicParsing="false" onAction="#sendpwdBtnAction" prefHeight="65.0" prefWidth="214.0" style="-fx-background-color: #D6EFFA;" text="Send Password to Email" textFill="WHITE" AnchorPane.leftAnchor="557.0" AnchorPane.rightAnchor="509.0">
+      <TextField fx:id="emailTF" layoutX="399.0" layoutY="347.0" prefHeight="46.0" prefWidth="529.0" promptText="Email" AnchorPane.leftAnchor="399.0" AnchorPane.rightAnchor="352.0" />
+      <Button fx:id="sendpwdBtn" layoutX="592.0" layoutY="573.0" mnemonicParsing="false" onAction="#sendpwdBtnAction" prefHeight="46.0" prefWidth="143.0" style="-fx-background-color: #90d9fb;" text="Send Code" textFill="WHITE" AnchorPane.leftAnchor="592.0" AnchorPane.rightAnchor="545.0">
          <font>
             <Font name="Tahoma Bold" size="16.0" />
          </font></Button>
-      <Label fx:id="noticeLabel" alignment="CENTER" layoutX="185.0" layoutY="331.0" prefHeight="28.0" prefWidth="307.0" text="Message sent!" visible="false" AnchorPane.leftAnchor="185.0">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <ImageView fitHeight="145.0" fitWidth="143.0" layoutX="592.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="592.0" AnchorPane.rightAnchor="545.0">
+      <ImageView fitHeight="145.0" fitWidth="143.0" layoutX="592.0" layoutY="99.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="592.0" AnchorPane.rightAnchor="545.0">
          <image>
             <Image url="@google.png" />
          </image>
       </ImageView>
-      <Label layoutX="514.0" layoutY="314.0" text="Trouble Logging In?" AnchorPane.leftAnchor="514.0" AnchorPane.rightAnchor="-112.0">
+      <Label layoutX="513.0" layoutY="282.0" text="Trouble Logging In?" AnchorPane.leftAnchor="513.0" AnchorPane.rightAnchor="-111.0">
          <font>
             <Font name="Tahoma Bold" size="27.0" />
          </font>
       </Label>
+      <TextField fx:id="codeTF" layoutX="399.0" layoutY="414.0" prefHeight="46.0" prefWidth="529.0" promptText="Received code" />
+      <PasswordField fx:id="newPwdPF" layoutX="399.0" layoutY="483.0" prefHeight="46.0" prefWidth="529.0" promptText="New password" />
    </children>
 </AnchorPane>
